--- a/note-taking-api/package.json
+++ b/note-taking-api/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "npx tsc",
-        "start": "node dist/index.js",
-        "dev": "nodemon dist/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc",
+        "dev": "ts-node-dev --respawn src/index.ts",
+        "start": "node dist/index.js"
     },
     "keywords": [],
     "author": "",
@@ -134,5 +133,16 @@
         "xtend": "^4.0.2",
         "yn": "^3.1.1"
     },
-    "description": ""
+    "description": "",
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
+    },
+    "include": ["src/**/*"]
 }
