--- a/mongo.env
+++ b/mongo.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb:mongodb+srv://nwakalokenechukwu:bROU4oDzvJhP5cFe@cluster0.jrw5p.mongodb.net/
+MONGODB_URI=mongodb://localhost:27017/notesdb
+PORT=3000
