--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "mongoose": "^8.12.1",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.8.2"
+        "ts-node-dev": "^2.0.0"
+    },
+    "devDependencies": {
+        "typescript": "^5.3.3"
     }
 }
