--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,6 +111,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
     
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "To-Do-api/src/index.ts", "To-Do-api/middleware", "To-Do-api/controllers"],
     "exclude": ["node_modules"]
 }
